fix (Charity): fixed display for bottom aligned image

--- a/src/DotHiv/WebsiteCharityBundle/Resources/lesscss/custom-other.less
+++ b/src/DotHiv/WebsiteCharityBundle/Resources/lesscss/custom-other.less
@@ -20,6 +20,7 @@
     .span6 {
         position: relative;
         top: -10px;
+        min-height: 270px;
     }
     
     img {
